# racing-wheel

./: Cargo.toml  openocd.cfg
.cargo/: config.toml
configurator/: Cargo.toml
configurator/src/: main.rs
lib/config/src/: config.rs  control.rs  lib.rs
lib/fixed-num/: Cargo.toml
lib/fixed-num/src/: fixed.rs  fractional.rs  lib.rs
lib/force-feedback/: Cargo.toml
lib/force-feedback/src/: effect.rs  ffb.rs  lib.rs  reports.rs
lib/usb-hid-device/: Cargo.toml
lib/usb-hid-device/src/: hid.rs  hid_device.rs  lib.rs
pedals/: Cargo.toml
pedals/src/: hx711.rs  main.rs  pedals.rs
racing-wheel/: Cargo.toml
racing-wheel/src/: config.rs  main.rs  motor.rs  racing_wheel.rs  simple_wheel.rs
racing-wheel/src/racing_wheel/: descriptor.rs  hid_reports.rs  racing_wheel_hid.rs  ram_pool.rs
racing-wheel/src/usb/: hid.rs  mod.rs
src/: descriptor.rs  fixed.rs  hid.rs  hid_device.rs  main.rs  misc.rs  motor.rs  racing_wheel.rs  ram_pool.rs  reports.rs  simple_wheel.rs
src/racing_wheel/: descriptor.rs  ffb.rs  hid_reports.rs  mod.rs  racing_wheel.rs  racing_wheel_hid.rs  ram_pool.rs  reports.rs
src/usb/: hid_device.rs
tests/: Cargo.toml
tests/src/: main.rs
